Increase width of RollingNotice to prevent overflow

--- a/front/components/commons/RollingNotice.module.css
+++ b/front/components/commons/RollingNotice.module.css
@@ -8,7 +8,7 @@
 .noticeRolling {
   height: 30px;
   line-height: 200%;
-  width: 280px;
+  width: 300px;
   position: relative;
   overflow: hidden;
   display: inline-block;
